# InvestRiskMo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  conftest.py  docker-compose.yml  pyproject.toml  questionnaire_app.py  requirements.txt  setup.py
data/: answer.json  combined_questionnaire.json
pulse-main/: app.py  test.py
src/config/: database.py
src/crud/: assessment.py
src/models/: assessment.py  create_tables.py
src/utils/: dashboard.py  db_viewer.py
static/css/: styles.css
